Fixed styles on mobile view on advanced search page (stretched submit button & input box)

--- a/ds_judgements_public_ui/sass/includes/_structured_search.scss
+++ b/ds_judgements_public_ui/sass/includes/_structured_search.scss
@@ -24,7 +24,7 @@
     max-width: 100%;
   }
 
-  &__full-text-panel {
+   &__full-text-panel {
     margin-top: $spacer__unit;
     margin-bottom: $spacer__unit;
     text-align: left;
@@ -250,7 +250,7 @@
   }
 
   input[type=text] {
-    width: 95%;
+    width: 75%;
   }
 
   input[type=submit] {
@@ -259,9 +259,55 @@
     padding-left: calc($spacer__unit * 3);
     margin-top: calc($spacer__unit * 0.5);
     margin-bottom: $spacer__unit;
-    width: 100%;
+    width: 50%;
+    position: relative;
+    left: 4px;
     @media (min-width: $grid__breakpoint-medium) {
-      width: auto;
+      width: auto;     
+    }
+  }
+  &__search-term-label.desktop {
+    @media (max-width: $grid__breakpoint-medium) {
+      display: none;
+    }
+    @include sr-only;
+
+  }
+
+  &__search-term-label.mobile {
+    @media (min-width: $grid__breakpoint-medium) {
+      display: none;
+    }
+  }
+
+  &__search-term-input {
+    @include text_field;
+    width: 80%;
+    min-height: calc($spacer__unit * 2);
+    font-size: 1.2rem;
+
+    @media (min-width: $grid__breakpoint-small) {
+      width: 20rem;
+    }
+
+    @media (min-width: $grid__breakpoint-medium) {
+      width: 25rem;
+    }
+
+    @media (min-width: $grid__breakpoint-extra-large) {
+      width: 35rem;
+    }
+
+    &.mobile {
+      @media (min-width: $grid__breakpoint-medium) {
+        display: none;
+      }
+    }
+
+    &.desktop {
+      @media (max-width: $grid__breakpoint-medium) {
+        display: none;
+      }
     }
   }
 
